# pyjuliapkg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yaml  tests.yml
src/juliapkg/: __init__.py  __main__.py  cli.py  compat.py  deps.py  find_julia.py  install_julia.py  registry.py  releases.py  repl.py  state.py
test/: test_all.py  test_cli.py  test_compat.py  test_internals.py
test/juliapkg_test_editable_setuptools/: pyproject.toml
test/juliapkg_test_editable_setuptools/juliapkg_test_editable_setuptools/: __init__.py  juliapkg.json
