[project]
name = "juliapkg"
version = "0.1.14"
description = "Julia version manager and package manager"
authors = [{ name = "Christopher Doris" }]
dependencies = ["semver~=3.0"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "http://github.com/JuliaPy/pyjuliapkg"
Repository = "http://github.com/JuliaPy/pyjuliapkg.git"
Issues = "http://github.com/JuliaPy/pyjuliapkg/issues"
Changelog = "https://github.com/JuliaPy/pyjuliapkg/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.rye]
managed = true
dev-dependencies = ["pytest ~=8.2", "pre-commit ~=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/juliapkg"]
