[project]
name = "juliapkg"
version = "0.1.21"
description = "Julia version manager and package manager"
authors = [{ name = "Christopher Doris" }]
dependencies = [
    "semver >=3.0,<4.0",
    "filelock >=3.16,<4.0",
    "tomlkit >=0.13.3,<0.14",
    "tomli >=2.0,<3.0",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
cli = ["click >=8.0,<9.0"]

[project.urls]
Homepage = "http://github.com/JuliaPy/pyjuliapkg"
Repository = "http://github.com/JuliaPy/pyjuliapkg.git"
Issues = "http://github.com/JuliaPy/pyjuliapkg/issues"
Changelog = "https://github.com/JuliaPy/pyjuliapkg/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E712"]

[tool.uv]
dev-dependencies = ["pytest", "pre-commit", "juliapkg_test_editable_setuptools"]

[tool.uv.sources]
juliapkg_test_editable_setuptools = { path = "test/juliapkg_test_editable_setuptools", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/juliapkg"]
