[metadata]
name = juliapkg
version = 0.1.9
description = Julia version manager and package manager
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
project_urls =
    Home = http://github.com/cjdoris/pyjuliapkg

[options]
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    semantic_version ~=2.9

[options.packages.find]
where = src

[options.package_data]
juliapkg = *.json
